--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body, html {
     flex-wrap:wrap;
     background-color: violet;
     outline: 2px dotted #f06b06;
-    height:30rem;
+    height:40rem;
     width:70em;
 }
 
@@ -19,9 +19,9 @@ body, html {
     height: 20%;
 }
 
-.debitsScreen {
+.debitsScreen, .leftOverScreen, .creditsScreen {
     border: 2px dotted rgb(172, 1, 1);
-    background-color: rgb(172,1,1);
+    background-color: rgb(255, 255, 255);
     margin:auto;
     width:75%;
     height:75%;
@@ -46,4 +46,23 @@ body, html {
     background-color: aqua;
     height:80%;
     width:100%;  
+}
+
+.calendar {
+    display:grid;
+    outline:2px dotted red;
+}
+
+.calendarRows {
+    display:flex;
+    flex-flow: row nowrap;
+}
+
+.calendarDays {
+    background-color: #D8D9DB;
+    color:black;
+    border:2px solid black;
+    font-size: 20px;
+    height:78px;
+    flex-basis:24.5%;
 }
