--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ body, html {
 .container {
     display:flex;
     flex-wrap:wrap;
+    flex-direction:row;
     background-color: rgb(58, 58, 58);
     height:40rem;
     width:70em;
@@ -66,9 +67,19 @@ body, html {
 }
 
 form {
-    display:inline-flex;
-    margin-left: 100%;
-    height:100%;
-    flex-direction: column;
+    position:absolute;
+    right:0;
+    top:0;
+    width:18%;
+    height:20rem;
     border: 2px dotted red;
+}
+
+table {
+    border:2px dotted blue;
+    position:absolute;
+    right:0;
+    width:18%;
+    height:20rem;
+    bottom:.5rem;
 }
