--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,7 +43,7 @@ body, html {
 
 .calendarLayout {
     background-color: #A6376B;
-    height:80%;
+    height:86%;
     width:100%;  
     text-align: center;
 }
@@ -104,6 +104,6 @@ table {
     position:absolute;
     right:0;
     width:18%;
-    height:20rem;
-    bottom:.5rem;
+    height:21rem;
+    bottom:0;
 }
